--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.3.9-0": ["Mon Aug 18 2014", "Isaac Isao Saito", "130s@2000.jukuin.keio.ac.jp"]}
+{"0.3.10-0": ["Wed Oct 01 2014", "Isaac Isao Saito", "130s@2000.jukuin.keio.ac.jp"], "0.3.9-0": ["Mon Aug 18 2014", "Isaac Isao Saito", "130s@2000.jukuin.keio.ac.jp"]}
