--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.3.9-0": ["Mon Aug 18 2014", "Scott K Logan", "logans@cottsay.net"]}
+{"0.3.10-0": ["Wed Oct 01 2014", "Scott K Logan", "logans@cottsay.net"], "0.3.9-0": ["Mon Aug 18 2014", "Scott K Logan", "logans@cottsay.net"]}
