--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2dce9ad
+	base = e1c8f29
 	trimbase = 
 	parent = rpm/indigo/rqt_plot
-	previous = 
+	previous = 2dce9ad
