--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 91377a9
+	base = 34170cf
 	trimbase = 
 	parent = rpm/indigo/rqt_image_view
-	previous = 
+	previous = 91377a9
