--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e23acab
+	base = 6cba7f0
 	trimbase = 
 	parent = rpm/indigo/rqt_graph
-	previous = 
+	previous = e23acab
