--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d77dcf5
+	base = 82ee7fd
 	trimbase = 
 	parent = rpm/indigo/rqt_publisher
-	previous = 
+	previous = d77dcf5
