--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 519c967
+	base = 737996e
 	trimbase = 
 	parent = rpm/indigo/rqt_launch
-	previous = 
+	previous = 519c967
