--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dcca67f
+	base = 156c66e
 	trimbase = 
 	parent = rpm/indigo/rqt_top
-	previous = 
+	previous = dcca67f
