--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 737518f
+	base = d887cb7
 	trimbase = 
 	parent = rpm/indigo/rqt_topic
-	previous = 
+	previous = 737518f
