--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2213d9a
+	base = c3fca93
 	trimbase = 
 	parent = rpm/indigo/rqt_shell
-	previous = 
+	previous = 2213d9a
