--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = afa5ff9
+	base = 6909d04
 	trimbase = 
 	parent = rpm/indigo/rqt_py_console
-	previous = 
+	previous = afa5ff9
