--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 17128f1
+	base = bc5cafe
 	trimbase = 
 	parent = rpm/indigo/rqt_logger_level
-	previous = 
+	previous = 17128f1
