--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2158306
+	base = d183240
 	trimbase = 
 	parent = rpm/indigo/rqt_action
-	previous = 
+	previous = 2158306
