--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0369f0c
+	base = 964d963
 	trimbase = 
 	parent = rpm/indigo/rqt_web
-	previous = 
+	previous = 0369f0c
