--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1f44c86
+	base = 946b597
 	trimbase = 
 	parent = rpm/indigo/rqt_console
-	previous = 
+	previous = 1f44c86
