--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5b7e0c2
+	base = 0224599
 	trimbase = 
 	parent = rpm/indigo/rqt_py_common
-	previous = 
+	previous = 5b7e0c2
