--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1a043bb
+	base = 1123bc8
 	trimbase = 
 	parent = rpm/indigo/rqt_common_plugins
-	previous = 
+	previous = 1a043bb
