--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dc6fc19
+	base = 96ff93d
 	trimbase = 
 	parent = rpm/indigo/rqt_bag_plugins
-	previous = 
+	previous = dc6fc19
