--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7e7d943
+	base = e9c4600
 	trimbase = 
 	parent = rpm/indigo/rqt_bag
-	previous = 
+	previous = 7e7d943
