--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e554519
+	base = 3334727
 	trimbase = 
 	parent = rpm/indigo/rqt_msg
-	previous = 
+	previous = e554519
