--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0241666
+	base = 5deecc6
 	trimbase = 
 	parent = rpm/indigo/rqt_service_caller
-	previous = 
+	previous = 0241666
