--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a2d3656
+	base = 264c488
 	trimbase = 
 	parent = rpm/indigo/rqt_srv
-	previous = 
+	previous = a2d3656
