--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5ca417c
+	base = 68f6d55
 	trimbase = 
 	parent = rpm/indigo/rqt_reconfigure
-	previous = 
+	previous = 5ca417c
