--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 815d5bd
+	base = 555d1a2
 	trimbase = 
 	parent = rpm/indigo/rqt_dep
-	previous = 
+	previous = 815d5bd
